Fix navbar logo centering on mobile devices

--- a/src/styles/sections/welcome/partials/_navbar.scss
+++ b/src/styles/sections/welcome/partials/_navbar.scss
@@ -61,6 +61,7 @@ $page-navigation-logo-margin-left: 30px;
             width: 30%;
             height: auto;
             padding-bottom: 100%;
+            margin-left: 0;
         }
     }
 }
